2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml:
	* doc/oprofile.1.in: s/physical CPU/CPU/

2003-10-20  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_perfmon.h: disable perfmon nicely

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp:
	* gui/ui/oprof_start.base.ui: Fix reading of separate
	parameters. Add CPU and thread separation

2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.cpp: relative path are relative to current dir
	  not filename.

2003-10-20  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opreport.1.in: fix --merge docs and profile specs

2003-10-20  John Levon  <levon@movementarian.org>

	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libop/op_config.h:
	* libop/op_sample_file.h:
	* libpp/op_header.cpp: remove ctr and separate_* from
	header. Re-arrange it a little, and make it 64 bytes
	on ILP32. Bump the version.

2003-10-20  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp: rework the clashing-axes
	error message to be nicer to the user

2003-10-20  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp: if tid == tgid for
	every profile class, allow axes of both TID and TGID
	- there is no actual difference, only theoretical

2003-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c: correct an error message
	* libop/op_alloc_counter.h: remove bogus FIXME
	* libutil++/child_reader.cpp: avoid quadratic behaviour if child does a
	  lot of output in stderr
	* libpp/opgprof.cpp: fix comment

2003-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: redundant return

2003-10-19  John Levon  <levon@movementarian.org>

	* libop/op_events.c: move to a fixed value for the default
	event count value

2003-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	remove some FIXME: