@@ -11,8 +11,7 @@
 #ifndef OPD_PERFMON_H
 #define OPD_PERFMON_H
 
-/* broken code */
-#if 0 && defined(__ia64__)
+#ifdef __ia64__
 
 #include <stdlib.h>
 
